--- a/deployments/docker-compose.tests.yaml
+++ b/deployments/docker-compose.tests.yaml
@@ -1,13 +1,13 @@
 version: "3"
 
 services:
-  previewer_service:
+  minisearch_service:
     build:
       context: ../
-      dockerfile: ./build/Dockerfile-previewer
-    image: previewer_service_docker_image    
+      dockerfile: ./build/Dockerfile-minisearch
+    image: minisearch_service_docker_image    
     volumes:
-      - ../configs/config-docker.toml:/etc/previewer/config.toml:ro
+      - ../configs/config-docker.toml:/etc/minisearch/config.toml:ro
 
     restart: on-failure
     ports:
@@ -15,22 +15,11 @@ services:
     expose:
       - 8088
 
-  web:
-    build:
-      context: ../
-      dockerfile: ./build/Dockerfile-nginx   
-    ports:
-      - "8080:80"
-    expose:
-      - 80
-    environment:      
-      - NGINX_PORT=80
-
   integration_tests:
     build:
       context: ../
       dockerfile: ./build/Dockerfile-tests  
     command: "true" 
     links:
-      - previewer_service
+      - minisearch_service
     restart: on-failure
