--- a/configs/config-docker.toml
+++ b/configs/config-docker.toml
@@ -4,3 +4,6 @@ level = "INFO"
 [http]
 host = "0.0.0.0"
 port = "8088"
+
+[psql]
+dsn = "host=postgres port=5432 user=sergey password=sergey dbname=calendar sslmode=disable"
